# wyoloservice2_worker

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  README_root.md  ROADMAP.md  control_host.env  docker-compose.son.yaml  docker-compose.yaml  docker-compose.yml  docker_images.md  index.html  micro_train.sh  samba_mount.sh  start_environment.sh  todo.txt  user.env
app/: .gitignore  Dockerfile  app.code-workspace  base.py  config.yaml  config_test_complete.yaml  dataset.yaml  main.py  nuevo_metodo.txt  test_config.yaml  test_system_metrics.py  test_system_metrics_simple.py  verify_mlflow_metrics.py
app/.dvc/: config
app/application/: executor.py
app/application/utils/: util.py
app/dataset/labels/: train.cache  val.cache
app/docker/: mount-cifs.sh
app/lib/: .gitignore  .pre-commit-config.yaml  MODEL_REGISTRATION.md  Makefile  README.md  pyproject.toml
app/lib/examples/: basic_training.py  config_example.yaml
app/lib/heart/: trainer_wrapper.py  yolo_train.py
app/lib/src/wyolo/: __init__.py
app/lib/src/wyolo/cli/: __init__.py  yolo_train.py
app/lib/src/wyolo/config/: __init__.py
app/lib/src/wyolo/core/: __init__.py  mlflow_manager.py  mlflow_manager_broken.py  trainer_wrapper.py  trainer_wrapper_original.py  yolo_train.py
app/lib/src/wyolo/monitoring/: __init__.py  mlflow_manager.py  utils.py
app/lib/src/wyolo/optimization/: __init__.py  gpu_utils.py
app/lib/src/wyolo/training/: __init__.py  trainer_wrapper.py
app/lib/src/wyolo/utils/: __init__.py
app/lib/tests/: __init__.py  conftest.py  test_trainer_wrapper.py  test_yolo_train.py
app/tmp/tasks/: test_training_001.yaml
config/: control_host.env  control_host.env.base  user.env
config_train_example/: config_train.yaml
datasets_temporal/clasification/colorball.v8i.multiclass/: config_train.yaml  emulate.request.py  test.cache  train.cache  val.cache  valid.cache  yolo_dataset_validator.py  yolo_valid.py
datasets_temporal/detection/Deteksi komponen elektronik.v1i.yolov8/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets_temporal/segmentation/ArchitecturePlan/: Dockerfile  README.dataset.txt  README.roboflow.txt  config_train.yaml  data.yaml  docker-compose.yaml
docs/: Makefile  api_reference.rst  bibliography.rst  conf.py  faq.rst  getting_started.rst  index.rst  tutorials.rst  wyolo_documentation.tex
executor/: Dockerfile  README.md  docker-compose.yml  run_training.py
executor_v2.0/: Makefile  README.md  docker-compose.yaml  wyoloservice2_worker.code-workspace
executor_v2.0/config/: config.py  control_host.env  user.env
executor_v2.0/future/20250505 Grafana/: main.py
executor_v2.0/production/: Makefile  docker-compose.son.yaml
executor_v2.0/wtrain/: Dockerfile
executor_v2.0/wyolo/: Dockerfile
executor_v2.0/wyolo_mother/: Dockerfile
extra_readmes/: 01_Architecture_and_Backend_Core.md  02_Communication_Flow.md  03_Microservice_Design.md  04_Logic_Design.md  05_Data_Diagrams_and_Models.md  06_Usage_and_Test_Documentation.md  07_Security_Hardening_and_Resiliency.md  08_Deployment_Ops_and_Maintenance.md  09_Context_State_of_the_Art_and_Research.md
futuro/20250505 Grafana/: config.py
invoker/development/: Dockerfile  README.md  celery_config.py  config.yaml  coverage.sh  requirements.txt  run_tests.sh  worker_gpu.py
invoker/production/: install.sh  launcher_invoker.sh  worker_invoker@.service
production/: docker-compose.yaml
simple_dashboard/: README.md  app.py  requirements.txt
simple_dashboard/static/: app.js  styles.css
simple_dashboard/templates/: index.html
wyolo_father/: Dockerfile
wyolo_mother/: Dockerfile  Dockerfile.base  main.py  wtrain.py
wyolo_mother/.dvc/: config
wyolo_mother/app/: wtrain.py
wyolo_mother/application/: worker.py  wyolo_train.py
wyolo_mother/config/: config.yaml
wyolo_mother/docker/: requirements.txt
wyolo_mother/lib/: LICENSE  README.md
(+427 files in other folders)
